--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.github.starlangsoftware</groupId>
             <artifactId>Util</artifactId>
             <version>1.0.3</version>
